Map is showing TODO: BL from Server
Co-authored-by: Grossdrache <philipp@tull.de>
Co-authored-by: Simon <sito.prvt@t-online.de>

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </form>
 
 
-        <svg width="1000" viewBox="0 0 100 100">
+        <svg id="map" width="1000" viewBox="0 0 1000 1000">
             <path d = "M 21 54  L 23 57 L 27 56 L 29 58 L 32 57 L 031 56 L 29 54 L29 51 L31 50 L 27 51 L 23 52" fill="transparent" stroke="black"/>
         </svg>
 
