--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <label for="state">Bundesland</label>
              <select id="state" name="state"></select>
             <label for="zoom">Zoom</label>
-             <input type="number" id="zoom" name="zoom" min="0" max="1000" value="1">
+             <input type="number" id="zoom" name="zoom" min="0" max="1000" value="6">
+            
           </form>
-
-
+          <div id="overlay" class="loader"></div>
         <svg id="map" width="1000" viewBox="0 0 1000 1000">
-            <path d = "M 21 54  L 23 57 L 27 56 L 29 58 L 32 57 L 031 56 L 29 54 L29 51 L31 50 L 27 51 L 23 52" fill="transparent" stroke="black"/>
+            <path d = "M 0 500  L 250 500" fill="transparent" stroke="black"/>
         </svg>
 
         <script type="module" src="main.js"></script>
